fix(search-menu): remove gap between result items

--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
@@ -207,7 +207,6 @@
 
   .results {
     display: flex;
-    gap: 8px;
     flex-direction: column;
     margin: 0 auto;
     margin-top: 64px;
@@ -221,6 +220,7 @@
       overflow: auto;
       max-height: unset;
       height: calc(100vh - 210px);
+      padding-bottom: 128px;
     }
     @include breakpoints.breakpoint-up(Mobile) {
       width: auto;
@@ -233,7 +233,7 @@
       gap: 8px;
       flex-direction: column;
       cursor: pointer;
-      padding: 16px;
+      padding: 32px 16px 32px 16px;
 
       &:hover {
         background-color: colors.color('grey-05');
